test_regress/t/t_inst_recurse_bad.out
%Error: t/t_inst_recurse_bad.v:18:8: Unsupported: Recursive multiple modules (module instantiates something leading back to itself): 'looped'
        ... note: self-recursion (module instantiating itself directly) is supported.
module looped ( );
       ^~~~~~
%Error: Exiting due to
